# ocr-mcp

./: DEVPLAN.md  README.md  pyproject.toml
src/kiso_ocr_mcp/: ocr_runner.py  server.py
tests/: test_ocr_runner.py
