[project]
name = "kiso-ocr-mcp"
version = "0.3.0"
description = "Minimal MCP wrapper around a cloud vision LLM (OpenRouter direct, or via a consumer's LiteLLM gateway)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
kiso-ocr-mcp = "kiso_ocr_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiso_ocr_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: integration test requiring a live OPENROUTER_API_KEY",
]
